Added multi-client frontend redirect urls based on query param appended to oidc auth request. Removed redundant attributes and centralized redirect logic
