# src/main/java/org/sitmun/infrastructure/security/filter/SitmunClientFilter.java
@@ -1,0 +1,26 @@
+package org.sitmun.infrastructure.security.filter;
+
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import org.jspecify.annotations.NonNull;
+import org.sitmun.authentication.service.OidcRedirectService;
+import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.OncePerRequestFilter;
+
+import java.io.IOException;
+
+@Component
+@Profile("oidc")
+public class SitmunClientFilter extends OncePerRequestFilter {
+  @Override
+  protected void doFilterInternal(HttpServletRequest req, @NonNull HttpServletResponse res, @NonNull FilterChain chain) throws ServletException, IOException {
+    final String clientType = req.getParameter("client_type");
+    if (clientType != null) {
+      req.getSession(true).setAttribute(OidcRedirectService.CLIENT_TYPE, clientType);
+    }
+    chain.doFilter(req, res);
+  }
+}
